added some more styling & adjusted some html

--- a/index.html
+++ b/index.html
@@ -9,45 +9,49 @@
 
 </head>
 <body>
-<h1>PiccoliMorsi (goes here...)</h1>
-<div id="wrapper"></div>
-<div id="big-picture"></div>
-<div id="top-menu">
-	<ul>
-		<li><a href="#">Story</a></li>
-		<li><a href="#">Menu</a></li>
-		<li><a href="#">Reservations</a></li>
-		<li><a href="#">Hours</a></li>
-		<li><a href="#">Directions</a></li>
-	</ul>
-</div>
-<div id="api-row">
-<div class="api-panel" id="news"></div>
-<div class="api-panel" id="special"></div>
-<div class="api-panel" id="map"></div>
-</div>
-<div id="main-body"></div>
-<div id="food-pics">
-	<ul>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-	</ul>
-	<div>
-		<img src="#">
-	</div>
-	</div>
-	<div>
+
+<h3>PiccoliMorsi (goes here...)</h3>
+<div id="wrapper">
+	<div id="big-picture"></div>
+	<div id="top-menu">
 		<ul>
-			<li><span class="fa fa-facebook-square"></span><a href="https://www.facebook.com/pages/The-Iron-Yard/485071564987734?fref=ts"></a></li>
-			<li><span class="fa fa-twitter"></span><a href="https://twitter.com/TheIronYard"></a></li>
-			<li><span class="fa fa-instagram"></span><a href="https://instagram.com/theironyard/"></a></li>
+			<li id="left-corner"><a href="#">Story</a></li>
+			<li><a href="#">Menu</a></li>
+			<li><a href="#">Reservations</a></li>
+			<li><a href="#">Hours</a></li>
+			<li id="right-corner"><a href="#">Directions</a></li>
 		</ul>
 	</div>
-</div>
+	<div id="api-row">
+		<div class="api-panel" id="news"></div>
+		<div class="api-panel" id="special"></div>
+		<div class="api-panel" id="map"></div>
+	</div>
+	<div id="main-body">
 
+	</div>
+		<div id="right-full-panel">
+			<ul class="foods">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+
+			<div id="logo">
+				<img src="#">
+			</div>
+
+			<div>
+				<ul>
+					<li><span class="fa fa-facebook-square"></span><a href="https://www.facebook.com/pages/The-Iron-Yard/485071564987734?fref=ts"></a></li>
+					<li><span class="fa fa-twitter"></span><a href="https://twitter.com/TheIronYard"></a></li>
+					<li><span class="fa fa-instagram"></span><a href="https://instagram.com/theironyard/"></a></li>
+				</ul>
+			</div>
+		</div> <!-- End of right-full-panel div -->
+</div> <!-- END of wrapper div -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.0/mustache.min.js"></script>
