basic blocking done, ready for content

--- a/index.html
+++ b/index.html
@@ -10,47 +10,49 @@
 </head>
 <body>
 
-<h3>PiccoliMorsi (goes here...)</h3>
 <div id="wrapper">
-	<div id="big-picture"></div>
-	<div id="top-menu">
-		<ul>
-			<li id="left-corner"><a href="#">Story</a></li>
-			<li><a href="#">Menu</a></li>
-			<li><a href="#">Reservations</a></li>
-			<li><a href="#">Hours</a></li>
-			<li id="right-corner"><a href="#">Directions</a></li>
-		</ul>
-	</div>
-	<div id="api-row">
-		<div class="api-panel" id="news"></div>
-		<div class="api-panel" id="special"></div>
-		<div class="api-panel" id="map"></div>
-	</div>
-	<div id="main-body">
+	<div id="big-picture">big picture</div>
+		<div id="top-menu">
+			<ul>
+				<li id="left-corner"><a href="#">Story</a></li>
+				<li><a href="#">Menu</a></li>
+				<li><a href="#">Reservations</a></li>
+				<li><a href="#">Hours</a></li>
+				<li id="right-corner"><a href="#">Directions</a></li>
+			</ul>
+		</div>
+		<div id="api-row">
+			<div class="api-panel" id="news">news</div>
+			<div class="api-panel" id="special">specials</div>
+			<div class="api-panel" id="map">google map</div>
+		</div>
 
+	<div id="lower-body">
+	<div id="left-full-panel">
+			TABS: | Story | Menu | Reservations | Hours | Directions(?)
 	</div>
 		<div id="right-full-panel">
-			<ul class="foods">
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+			<ul id="foods">
+				<li class="food-photo">pic</li>
+				<li class="food-photo">pic</li>
+				<li class="food-photo">pic</li>
+				<li class="food-photo">pic</li>
+				<li class="food-photo">pic</li>
 			</ul>
 
 			<div id="logo">
-				<img src="#">
+				logo here
 			</div>
 
-			<div>
+			<div id"social">
 				<ul>
-					<li><span class="fa fa-facebook-square"></span><a href="https://www.facebook.com/pages/The-Iron-Yard/485071564987734?fref=ts"></a></li>
-					<li><span class="fa fa-twitter"></span><a href="https://twitter.com/TheIronYard"></a></li>
-					<li><span class="fa fa-instagram"></span><a href="https://instagram.com/theironyard/"></a></li>
+					<li class="icon"><span class="fa fa-facebook-square fa-2x"></span><a href="https://www.facebook.com/pages/The-Iron-Yard/485071564987734?fref=ts"></a></li>
+					<li class="icon"><span class="fa fa-twitter fa-2x"></span><a href="https://twitter.com/TheIronYard"></a></li>
+					<li class="icon"><span class="fa fa-instagram fa-2x"></span><a href="https://instagram.com/theironyard/"></a></li>
 				</ul>
 			</div>
 		</div> <!-- End of right-full-panel div -->
+	</div>
 </div> <!-- END of wrapper div -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
