--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
 
-<div id="wrapper">
+<div id="wrapper"> <!-- full page -->
 	<div id="big-picture">big picture</div>
-		<div id="top-menu">
+
+		<div id="top-menu"> <!--Menu under banner pic -->
 			<ul>
 				<li id="left-corner"><a href="#">Story</a></li>
 				<li><a href="#">Menu</a></li>
@@ -21,13 +22,14 @@
 				<li id="right-corner"><a href="#">Directions</a></li>
 			</ul>
 		</div>
+
 		<div id="api-row">
 			<div class="api-panel" id="news">news</div>
 			<div class="api-panel" id="special">specials</div>
 			<div class="api-panel" id="map">google map</div>
 		</div>
 
-	<div id="lower-body">
+	<div id="lower-body"> <!-- 2 panels left-right, to bottom -->
 	<div id="left-full-panel">
 			TABS: | Story | Menu | Reservations | Hours | Directions(?)
 	</div>
@@ -53,6 +55,7 @@
 			</div>
 		</div> <!-- End of right-full-panel div -->
 	</div>
+	<!-- still need a footer -->
 </div> <!-- END of wrapper div -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
