adds revised css and html file

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 
 <div id="wrapper">
-	<div id="big-picture">big picture</div>
+	<div id="big-picture"><img src="assets/restaurantphotos/restaurant_landscape1.jpg"/div>
 		<div id="top-menu">
-			<ul>
+			<ul id="ul-top-menu">
 				<li id="left-corner"><a href="#">Story</a></li>
 				<li><a href="#">Menu</a></li>
 				<li><a href="#">Reservations</a></li>
@@ -22,9 +22,9 @@
 			</ul>
 		</div>
 		<div id="api-row">
-			<div class="api-panel" id="news">news</div>
-			<div class="api-panel" id="special">specials</div>
-			<div class="api-panel" id="map">google map</div>
+			<div class="api-panel" id="news" class="redAPI">news</div>
+			<div class="api-panel" id="special" class="redAPI">specials</div>
+			<div class="api-panel" id="map" class="redAPI">google map</div>
 		</div>
 
 	<div id="lower-body">
