Adds revised CSS

--- a/index.html
+++ b/index.html
@@ -22,9 +22,18 @@
 			</ul>
 		</div>
 		<div id="api-row">
-			<div class="api-panel" id="news" class="redAPI">news</div>
-			<div class="api-panel" id="special" class="redAPI">specials</div>
-			<div class="api-panel" id="map" class="redAPI">google map</div>
+			<div class="api-panel redAPI" id="news">
+				<h4 class="locationBoxH4">Latest News</h4>
+			</div>
+			<div class="api-panel redAPI" id="special">
+				<h4 class="locationBoxH4">Today's Special</h4>
+			</div>
+			<div class="api-panel redAPI" id="map">
+				<h4 class="locationBoxH4">Our Location</h4>
+				<div>map here</div>
+				<p class="locationBox">10001 S. Casino Center Blvd, Las Vegas, NV 89104</p>
+				<p class="locationBox">555-555-1234 * 555-555-1234 * info@piccolimorsi.com</p>
+			</div>
 		</div>
 
 	<div id="lower-body">
@@ -33,11 +42,11 @@
 	</div>
 		<div id="right-full-panel">
 			<ul id="foods">
-				<li class="food-photo">pic</li>
-				<li class="food-photo">pic</li>
-				<li class="food-photo">pic</li>
-				<li class="food-photo">pic</li>
-				<li class="food-photo">pic</li>
+				<li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/appetizer.jpg"></li>
+				<li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/bruschetta.jpg"></li>
+				<li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/dessert1.jpg"></li>
+				<li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/lasagna.jpg"></li>
+				<li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/wine.jpg"></li>
 			</ul>
 
 			<div id="logo">
