adds revised css and html

--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
 
 		<div id="footer">
 		<p class="copyright">Copyright 2015 PiccoliMorsi - Web Design by The Iron Yard</p>
+			<div id="footerSocial">
 			<ul id="footerUL">
 				<li><img src="assets/social/1446098534_facebook_online_social_media.png"</li>
 				<li><img src="assets/social/1446098542_twitter_online_social_media.png"</li>
 				<li><img src="assets/social/1446098560_instagram_online_social_media.png"</li>
 			</ul>
-
+			</div>
 			</div> <!-- End of footer div-->
 	</div>
 </div> <!-- END of wrapper div -->
