adds end of day css and index

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 	<script type="x-tmpl-mustache" id="newsFormTemplate">
 		<h4 class="locationBoxH4">Latest News</h4>
 		<h5 id="news-title">{{data.title}}</h5>
-		<h5 id="news-date">{{data.date_published}}</h5>
-		<p id="news-post">{{data.post}}</p><a href="#">read more...</a>
+		<h5 id="news-date">{{data.date_published}}</h5> </br>
+		<p id="news-post">{{data.post}}&nbsp;<a href="#">Read more...</a></p>
 	</script>
 
 	<script type="x-tmpl-mustache" id="menuFormTemplate">
