--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 
 
 <div id="wrapper">
-	<div id="big-picture"><img src="assets/restaurantphotos/restaurant_landscape1.jpg"/div>
+	<div id="big-picture">
+		<div id="hero">
+				<div class= "current"><img src="assets/restaurantphotos/restaurant_landscape1.jpg" alt=""></div>    
+				<div><img src="assets/restaurantphotos/restaurant_landscape2.jpg" alt=""></div>
+				<div><img src="assets/restaurantphotos/restaurant_landscape3.jpg" alt=""></div>
+				<div><img src="assets/restaurantphotos/restaurant_landscape4.jpg" alt=""></div>
+				<div><img src="assets/restaurantphotos/restaurant_landscape5.jpg" alt=""></div>
+		 </div>
+	 </div>
 		<div id="top-menu">
 			<ul id="ul-top-menu">
 
