--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 	<script type="x-tmpl-mustache" id="appetizerFormTemplate">
 	<h2><em>APPETIZERS</em></h2>
 	{{#appetizers}}
-	<h4>{{item}}</h4>
+	<h4 class="item">{{item}}</h4>
 	<p class="price">{{price}}</p>
 	<p>{{description}}</p>
 	{{/appetizers}}
@@ -147,29 +147,29 @@
 	<script type="x-tmpl-mustache" id="saladFormTemplate">
 	<h2><em>SALADS</em></h2>
 	{{#salads}}
-	<h4>{{item}}</h4>
+	<h4 class="item">{{item}}</h4>
 	<p class="price">{{price}}</p>
 	<p>{{description}}</p>
 	{{/salads}}
 	</script>
 	<script type="x-tmpl-mustache" id="soupFormTemplate">
-	<h2><em>SOUPS</em></h2>
+	<h4 class="item">{{item}}</h4>
 	{{#soups}}
 	<h4>{{item}}</h4>
-	<p class="price">{{price}}</p>
+	<p class="price">cup: {{price.cup}} </p><p class="price">bowl: {{price.bowl}} </p>
 	<p>{{description}}</p>
 	{{/soups}}
 	</script>
 	<script type="x-tmpl-mustache" id="mainFormTemplate">
 	<h2><em>MAINS</em></h2>
 	{{#mains}}
-	<h4>{{item}}</h4>
+	<h4 class="item">{{item}}</h4>
 	<p class="price">{{price}}</p>
 	<p>{{description}}</p>
 	{{/mains}}
 	</script>
 	<script type="x-tmpl-mustache" id="drinkFormTemplate">
-	<h2><em>DRINKS</em></h2>
+	<h4 class="item">{{item}}</h4>
 	{{#drinks}}
 	<h4>{{item}}</h4>
 	<p class="price">{{price}}</p>
@@ -179,7 +179,7 @@
 	<script type="x-tmpl-mustache" id="dessertFormTemplate">
 	<h2><em>DESSERTS</em></h2>
 	{{#desserts}}
-	<h4>{{item}}</h4>
+	<h4 class="item">{{item}}</h4>
 	<p class="price">{{price}}</p>
 	<p>{{description}}</p>
 	{{/desserts}}
@@ -187,7 +187,7 @@
 	<script type="x-tmpl-mustache" id="dogFormTemplate">
 	<h2><em>CANE CUCINA</em></h2>
 	{{#CaneCucina}}
-	<h4>{{item}}</h4>
+	<h4 class="item">{{item}}</h4>
 	<p class="price">{{price}}</p>
 	<p>{{description}}</p>
 	{{/CaneCucina}}
