tidying up some javascript

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="big-picture">
         <div id="hero">
-                <div><img src="assets/restaurantphotos/slider1.jpg" alt=""></div>
+                <div class="current"><img src="assets/restaurantphotos/slider1.jpg" alt=""></div>
                 <div><img src="assets/restaurantphotos/slider2.jpg" alt=""></div>
          </div>
      </div>
