--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
             <section id="tab2" class="tab-content hide">
 							<div id="tab2" class="tab_content">
 								<h2>Our Menu Selections</h2>
+                <p> <span class="menu-added"><img src="assets/icons/Places-favorites-icon.png"/> = Local Favorite</span>
+                    <span class="menu-added"><img src="assets/icons/icon-lowsodium-bg.gif"/> = Low Sodium</span>
+                    <span class="menu-added"><img src="assets/icons/icon_under500cal.gif"/> = Under 500 Calories</span></p>
 								<div class="menu_divisions" id="appetizers"></div>
 								<div class="menu_divisions" id="salads"></div>
 								<div class="menu_divisions" id="soups"></div>
